force-app/main/default/objects/Accommodation_Request__c/Accommodation_Request__c.object-meta.xml
<CustomObject>
    <description>Created ONLY on explicit human approval. A validation rule blocks insert without it.</description>
    <label>Accommodation Request</label>
    <nameField>
        <label>Request Number</label>
        <type>AutoNumber</type>
        <displayFormat>AR-{00000}</displayFormat>
    </nameField>
    <pluralLabel>Accommodation Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>