force-app/main/default/objects/Accommodation_Request__c/fields/Approved_At__c.field-meta.xml
<CustomField>
    <fullName>Approved_At__c</fullName>
    <description>When the person approved sending this.</description>
    <inlineHelpText>The moment the person said yes. If this is empty, they did not say yes, and nothing should have been sent.</inlineHelpText>
    <label>Approved At</label>
    <type>DateTime</type>
</CustomField>