force-app/main/default/objects/Accommodation_Request__c/fields/Barrier_Report__c.field-meta.xml
<CustomField>
    <fullName>Barrier_Report__c</fullName>
    <label>Barrier Report</label>
    <referenceTo>Barrier_Report__c</referenceTo>
    <relationshipLabel>Accommodation Requests</relationshipLabel>
    <relationshipName>Accommodation_Requests</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>