force-app/main/default/objects/Accommodation_Request__c/fields/Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Reason__c</fullName>
    <description>Required if declined. Creates an audit trail and keeps the decline path dignified.</description>
    <label>Decline Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>