force-app/main/default/objects/Accommodation_Request__c/fields/Interactive_Process_Due__c.field-meta.xml
<CustomField>
    <fullName>Interactive_Process_Due__c</fullName>
    <description>The date by which the interactive process should have progressed.</description>
    <inlineHelpText>The date this should have moved by. A person is waiting behind this date and cannot see it.</inlineHelpText>
    <label>Interactive Process Due</label>
    <type>Date</type>
</CustomField>