force-app/main/default/objects/Accommodation_Request__c/fields/Manager_Response__c.field-meta.xml
<CustomField>
    <fullName>Manager_Response__c</fullName>
    <description>Where the employer has got to.</description>
    <inlineHelpText>Where the employer has got to. 'More info' is the answer that quietly kills requests, so if you set it, say precisely what is needed and never ask for anything medical.</inlineHelpText>
    <label>Manager Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>More info</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>