force-app/main/default/objects/Accommodation_Request__c/fields/Person_Approved__c.field-meta.xml
<CustomField>
    <fullName>Person_Approved__c</fullName>
    <description>The person holds the pen. Nothing leaves the system without this.</description>
    <label>Person Approved</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>