force-app/main/default/objects/Accommodation_Request__c/validationRules/Decline_Requires_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Decline_Requires_Reason</fullName>
    <active>true</active>
    <description>A decline must be explained. Keeps the decline path accountable and dignified.</description>
    <errorConditionFormula>AND(ISPICKVAL(Manager_Response__c, "Declined"), ISBLANK(Decline_Reason__c))</errorConditionFormula>
    <errorMessage>Please give a reason for declining. It will be visible to the person who asked.</errorMessage>
</ValidationRule>