force-app/main/default/objects/Accommodation_Request__c/validationRules/Requires_Person_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Requires_Person_Approval</fullName>
    <active>true</active>
    <description>The person holds the pen. A request cannot exist without their explicit approval.</description>
    <errorConditionFormula>NOT(Person_Approved__c)</errorConditionFormula>
    <errorMessage>This request cannot be created until the person has read it and approved it themselves.</errorMessage>
</ValidationRule>