force-app/main/default/objects/Accommodation_Request__c/listViews/All_Requests.listView-meta.xml
<ListView>
    <fullName>All_Requests</fullName>
    <columns>NAME</columns>
    <columns>Interactive_Process_Due__c</columns>
    <columns>Manager_Response__c</columns>
    <columns>Approved_At__c</columns>
    <columns>Barrier_Report__c</columns>
    <filterScope>Everything</filterScope>
    <label>All requests</label>
</ListView>