force-app/main/default/objects/Accommodation_Request__c/listViews/Answered_Yes.listView-meta.xml
<ListView>
    <fullName>Answered_Yes</fullName>
    <columns>NAME</columns>
    <columns>Manager_Response__c</columns>
    <columns>Interactive_Process_Due__c</columns>
    <columns>Barrier_Report__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Manager_Response__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Granted</label>
</ListView>