force-app/main/default/objects/Accommodation_Request__c/listViews/Awaiting_Decision.listView-meta.xml
<ListView>
    <fullName>Awaiting_Decision</fullName>
    <columns>NAME</columns>
    <columns>Interactive_Process_Due__c</columns>
    <columns>Approved_At__c</columns>
    <columns>Manager_Response__c</columns>
    <columns>Barrier_Report__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Manager_Response__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Awaiting a decision</label>
</ListView>