force-app/main/default/objects/Accommodation_Request__c/listViews/Clock_Running_Out.listView-meta.xml
<ListView>
    <fullName>Clock_Running_Out</fullName>
    <columns>NAME</columns>
    <columns>Interactive_Process_Due__c</columns>
    <columns>Manager_Response__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Manager_Response__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>Interactive_Process_Due__c</field>
        <operation>lessOrEqual</operation>
        <value>NEXT_N_DAYS:3</value>
    </filters>
    <label>Clock running out</label>
</ListView>