force-app/main/default/objects/Accommodation_Request__c/listViews/Declined_With_Reason.listView-meta.xml
<ListView>
    <fullName>Declined_With_Reason</fullName>
    <columns>NAME</columns>
    <columns>Manager_Response__c</columns>
    <columns>Decline_Reason__c</columns>
    <columns>Interactive_Process_Due__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Manager_Response__c</field>
        <operation>equals</operation>
        <value>Declined</value>
    </filters>
    <label>Declined, with the reason</label>
</ListView>