force-app/main/default/objects/Accommodation_Request__c/listViews/Waiting_On_More_Info.listView-meta.xml
<ListView>
    <fullName>Waiting_On_More_Info</fullName>
    <columns>NAME</columns>
    <columns>Manager_Response__c</columns>
    <columns>Interactive_Process_Due__c</columns>
    <columns>Barrier_Report__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Manager_Response__c</field>
        <operation>equals</operation>
        <value>More info</value>
    </filters>
    <label>Stalled on more info</label>
</ListView>